deployment/k8s/bootstrap/base/istio/peer-authentication.yaml
# SPDX-License-Identifier: Apache-2.0
# © Crown Copyright 2026. This work has been developed by the National Digital Twin Programme and is legally attributed to the Department for Business and Trade (UK) as the governing entity.

apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: peerauthentication-strict
spec:
  mtls:
    mode: STRICT
