deployment/k8s/bootstrap/base/istio/virtualService.yaml
# SPDX-License-Identifier: Apache-2.0
# © Crown Copyright 2026. This work has been developed by the National Digital Twin Programme and is legally attributed to the Department for Business and Trade (UK) as the governing entity.

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService

metadata:
  name: nova-virtual-service
spec:
  hosts:
    - placeholder
  gateways:
    - placeholder
  http:
    - match:
        - uri:
            prefix: /api
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
            Content-Security-Policy: "placeholder"
            Access-Control-Allow-Origin: "placeholder"
      route:
        - destination:
            host: nova-backend
            port:
              number: 80

    # Rule for root ("/") to prevent caching and add CSP header
    - match:
        - uri:
            exact: /
      headers:
        response:
          add:
            Cache-Control: "no-cache, no-store, must-revalidate"
            Pragma: "no-cache"
            Expires: "0"
            Content-Security-Policy: "placeholder"
            Access-Control-Allow-Origin: "placeholder"
      route:
        - destination:
            host: nova-frontend
            port:
              number: 80

    # Rule for all other paths with the CSP header
    - match:
        - uri:
            prefix: /
      rewrite:
        uriRegexRewrite:
          match: ^/(/|$)(.*)
          rewrite: /\2
      headers:
        response:
          add:
            Content-Security-Policy: "placeholder"
            Access-Control-Allow-Origin: "placeholder"
      route:
        - destination:
            host: nova-frontend
            port:
              number: 80
